# mozilla-central

./: .cvsignore  .hgignore  .hgtags  .project  AUTHORS  Makefile.in  README.md  aclocal.m4  allmakefiles.sh  chrome.manifest  client.mk  client.py  comm-config.h.in  config_build.sh  configure  configure.in  install.rdf  jar.mn  moz.build  mozconfig-extra  mozconfig-extra-android
calendar/libical/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.win32  aclocal.m4  autogen.sh  bootstrap  buildpackages  config.h  config.h.in  configure.in  configure.in.in  mkinstalldirs
calendar/libical/design-data/: Makefile.in  parameters.csv  params-in-prop.txt  properties.csv  restrictions.csv  value-types.csv
calendar/libical/doc/: Makefile.in
calendar/libical/examples/: .cvsignore  Makefile.am  Makefile.in  access_components.c  usecases.c
calendar/libical/scripts/: Makefile.in  mkderivedparameters.pl  mkderivedproperties.pl  mkderivedvalues.pl  mkrestrictiontable.pl  readvaluesfile.pl
calendar/libical/src/: Makefile.am  Makefile.in  moz.build
calendar/libical/test-data/: recur.txt
calendar/libical/zoneinfo/: Makefile.am  Makefile.in  zones.h  zones.tab
suite/: Makefile.in  README  app-config.mk  app.mozbuild  build.mk  configure.in  confvars.sh  extradependlibs.mk  makefiles.sh  moz.build
suite/app/: Makefile.in  application.ini  blocklist.xml  module.ver  moz.build  mozilla.in  nsSuiteApp.cpp  seamonkey.exe.manifest  seamonkey.in  splash.rc  splashos2.rc
suite/branding/: Makefile.in  jar.mn
suite/branding/content/: aboutRights.xhtml
suite/branding/nightly/: Makefile.in  jar.mn
suite/browser/: Makefile.in  SuiteBrowser.manifest  aboutAbout.html  browser-prefs.js  browser.js  fullScreen.js  hiddenWindow.xul  jar.mn  linkToolbarHandler.js  linkToolbarItem.js  linkToolbarOverlay.js  linkToolbarOverlay.xul  mailNavigatorOverlay.js  mailNavigatorOverlay.xul  metadata.js  metadata.xul  moz.build  navigator.css  navigator.js  navigator.xul  navigatorDD.js  navigatorOverlay.xul  nsAboutAbout.js  nsAboutRights.js  nsBrowserContentHandler.js  nsBrowserContentListener.js  nsBrowserStatusHandler.js  nsTypeAheadFind.js  safeBrowsingOverlay.js  safeBrowsingOverlay.xul  sessionHistoryUI.js  tabbrowser.xml  urlbarBindings.xml  viewPartialSource.js  viewPartialSource.xul  viewSource.xul  viewSourceOverlay.xul  viewsource.js  webDeveloperOverlay.js  webDeveloperOverlay.xul
suite/browser/mac/: platformMailOverlay.xul  platformNavigationBindings.xul
suite/browser/pageinfo/: feeds.js  feeds.xml  pageInfo.css  pageInfo.js  pageInfo.xul  permissions.js  security.js
suite/browser/public/: Makefile.in  nsIBookmarksService.idl
suite/browser/src/: Makefile.in  nsBookmarksService.cpp  nsBookmarksService.h  nsInternetSearchService.cpp  nsInternetSearchService.h  nsLocalSearchService.cpp  nsLocalSearchService.h
suite/browser/test/: Makefile.in
suite/browser/unix/: platformMailOverlay.xul  platformNavigationBindings.xul
suite/browser/win/: platformNavigationBindings.xul
suite/common/: Makefile.in  about.xhtml  aboutLife.xhtml  aboutPrivateBrowsing.xul  aboutSessionRestore.js  aboutSessionRestore.xhtml  app-license.html  askViewZoom.js  askViewZoom.xul  blockedSite.xhtml  certError.css  certError.xhtml  certError.xml  communicator.css  consoleOverlay.xul  contentAreaClick.js  contentAreaContextOverlay.xul  contentAreaUtils.js  contents.rdf  customizeToolbar.js  customizeToolbar.xul  defaultClientDialog.js  defaultClientDialog.xul  findUtils.js  fullscreen-video.xhtml  helpEditorOverlay.xul  helpMessengerOverlay.xul  helpOverlay.js  helpOverlay.xul  helpSecurityOverlay.xul  jar.mn  moz.build  nsContextMenu.js  openLocation.js  openLocation.xul  passwordManager.xul  printPreviewBindings.xml  safeMode.js  safeMode.xul  sanitize.xul  (+12 more)
suite/common/bindings/: findbar.xml  general.xml  notification.xml  prefwindow.xml  toolbar.xml
suite/common/bookmarks/: addBookmark.js  addBookmark.xul  bm-panel.js  bm-panel.xul  bm-props.js  bm-props.xul  bookmarks.js  bookmarksManager.css  bookmarksManager.js  bookmarksManager.xul  bookmarksMenu.js  bookmarksOverlay.xul  bookmarksTree.xml  browser-places.js  editBookmarkOverlay.js  editBookmarkOverlay.xul  findBookmark.xul  moveBookmarks.js  moveBookmarks.xul  placesOverlay.xul  sortFolder.xul
suite/common/dataman/: dataman.css  dataman.js  dataman.xml  dataman.xul
suite/common/directory/: directory.html  directory.js  directory.xul
suite/components/: Makefile.in  nsSuiteComponents.h
suite/config/: version-191.txt  version-20.txt  version.txt
suite/debugQA/: Makefile.in  install.rdf  jar.mn  moz.build
suite/installer/: Makefile.in  package-manifest.in  removed-files.in
suite/locales/: Makefile.in  all-locales  filter.py  jar.mn  l10n-aurora.ini  l10n-beta.ini  l10n-central.ini  l10n-moz2.0.ini  l10n.ini  shipped-locales
suite/mailnews/: Makefile.in  commandglue.js  folderDisplay.js  folderPane.xul  jar.mn  mail-offline.js  mail3PaneWindowCommands.js  mailCommands.js  mailContextMenus.js  mailEditorOverlay.xul  mailKeysOverlay.xul  mailOverlay.js  mailOverlay.xul  mailTasksOverlay.js  mailTasksOverlay.xul  mailViewList.js  mailViewList.xul  mailViewSetup.js  mailViewSetup.xul  mailWidgets.xml  mailWindow.js  mailWindowOverlay.js  mailWindowOverlay.xul  messageWindow.js  messageWindow.xul  messenger.css  messenger.xul  messengerdnd.js  moz.build  msgFolderPickerOverlay.xul  msgHdrViewOverlay.js  msgHdrViewOverlay.xul  msgMail3PaneWindow.js  msgPrintEngine.xul  msgSelectOffline.xul  msgViewNavigation.js  msgViewPickerOverlay.js  msgViewPickerOverlay.xul  newmailalert.css  newmailalert.js  (+11 more)
suite/modules/: DownloadTaskbarIntegration.jsm  Makefile.in  Sanitizer.jsm  WindowsJumpLists.jsm  WindowsPreviewPerTab.jsm  moz.build
suite/profile/: Makefile.in  jar.mn  migration.js  migration.xul  moz.build  nsSuiteDirectoryProvider.cpp  nsSuiteDirectoryProvider.h
suite/security/: Makefile.in  jar.mn
suite/shell/: Makefile.in
suite/smile/: Makefile.in
suite/test/: xpcshell.ini
suite/themes/: Makefile.in
(+13212 files in other folders)
